lib_LTLIBRARIES = libbgp.la
libbgp_la_SOURCES = bgp-error.cc bgp-filter.cc bgp-fsm.cc bgp-rib.cc bgp-sink.cc protocol/bgp-bad-message.cc protocol/bgp-capability.cc protocol/bgp-errcode.cc protocol/bgp-keepalive-message.cc protocol/bgp-notification-message.cc protocol/bgp-open-message.cc protocol/bgp-packet.cc protocol/bgp-path-attrib.cc protocol/bgp-update-message.cc protocol/serializable.cc realtime-clock.cc route.cc route-event-bus.cc
include_HEADERS = bgp-config.h bgp-error.h bgp-filter.h bgp-fsm.h bgp-out-handler.h bgp-rib.h bgp-sink.h clock.h protocol/bgp.h protocol/bgp-bad-message.h protocol/bgp-capability.h protocol/bgp-errcode.h protocol/bgp-keepalive-message.h protocol/bgp-message.h protocol/bgp-notification-message.h protocol/bgp-open-message.h protocol/bgp-packet.h protocol/bgp-path-attrib.h protocol/bgp-update-message.h protocol/serializable.h protocol/value-op.h realtime-clock.h route.h route-event.h route-event-bus.h route-event-receiver.h