lib_LTLIBRARIES = libbgp.la
libbgp_la_SOURCES = bgp-error.cc bgp-filter.cc bgp-fsm.cc bgp-rib.cc bgp-sink.cc bgp-bad-message.cc bgp-capability.cc bgp-errcode.cc bgp-keepalive-message.cc bgp-notification-message.cc bgp-open-message.cc bgp-packet.cc bgp-path-attrib.cc bgp-update-message.cc serializable.cc realtime-clock.cc route.cc route-event-bus.cc bgp-log-handler.cc fd-out-handler.cc
pkginclude_HEADERS = bgp-config.h bgp-error.h bgp-filter.h bgp-fsm.h bgp-out-handler.h bgp-rib.h bgp-sink.h clock.h bgp.h bgp-bad-message.h bgp-capability.h bgp-errcode.h bgp-keepalive-message.h bgp-message.h bgp-notification-message.h bgp-open-message.h bgp-packet.h bgp-path-attrib.h bgp-update-message.h serializable.h value-op.h realtime-clock.h route.h route-event.h route-event-bus.h route-event-receiver.h bgp-log-handler.h fd-out-handler.h
