lib_LTLIBRARIES = libbgp.la
libbgp_la_SOURCES = bgp-bad-message.cc bgp-capability.cc bgp-errcode.cc bgp-filter.cc bgp-fsm.cc bgp-keepalive-message.cc bgp-log-handler.cc bgp-notification-message.cc bgp-open-message.cc bgp-packet.cc bgp-path-attrib.cc bgp-rib4.cc bgp-rib6.cc bgp-sink.cc bgp-update-message.cc fd-out-handler.cc prefix4.cc prefix6.cc realtime-clock.cc route-event-bus.cc serializable.cc
pkginclude_HEADERS = bgp-afi.h bgp-bad-message.h bgp-capability.h bgp-config.h bgp-errcode.h bgp-filter.h bgp-fsm.h bgp-keepalive-message.h bgp-log-handler.h bgp-message.h bgp-notification-message.h bgp-open-message.h bgp-out-handler.h bgp-packet.h bgp-path-attrib.h bgp-rib.h bgp-rib4.h bgp-rib6.h bgp-sink.h bgp-update-message.h bgp.h clock.h fd-out-handler.h prefix.h prefix4.h prefix6.h realtime-clock.h route-event-bus.h route-event-receiver.h route-event.h serializable.h value-op.h
